@@ -54,7 +54,10 @@ function is_logged_in() {
         //  First we store some information in the new session to prevent
         //  information-loss.
         $session_expired_post = $_POST;
-        $session_expired_location = PAGE_NAME;
+        if (defined('PAGE_NAME')) {
+            $session_expired_location = PAGE_NAME;
+        }
+        
         if (!sqsession_is_registered('session_expired_post')) {
             sqsession_register($session_expired_post,'session_expired_post');
         }
